Fixed omnibar animation causing margins to realign

--- a/frontend/core/src/main/webapp/static/less/components.less
+++ b/frontend/core/src/main/webapp/static/less/components.less
@@ -266,8 +266,8 @@ footer {
 
 .omnibar-animation.ng-enter, .omnibar-animation.ng-leave {
   position: absolute;
-  left: @horizontal-grid;
-  right: @horizontal-grid;
+  left: 0;
+  right: 0;
 }
 
 .omnibar-animation.ng-enter {
